--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>CacheLabs Startup System</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+    }
+    header {
+      background: #22223b;
+      color: #f2e9e4;
+      padding: 2rem 0 1rem 0;
+      text-align: center;
+      letter-spacing: 2px;
+      font-size: 2.5rem;
+      font-weight: bold;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    }
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: rgba(255,255,255,0.97);
+      border-radius: 18px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+      padding: 2rem 2.5rem 2.5rem 2.5rem;
+    }
+    h2 {
+      color: #4a4e69;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      font-size: 2rem;
+      border-bottom: 2px solid #f2e9e4;
+      padding-bottom: 0.5rem;
+    }
+    form {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+      align-items: center;
+      background: #f2e9e4;
+      padding: 1rem 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    }
+    form input, form button {
+      font-size: 1rem;
+      padding: 0.5rem 0.8rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      outline: none;
+      transition: border 0.2s;
