--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CacheLabs Startup System</title>
-  <style>
-    body 
-  </div>
+  <title>CacheLabs Pvt LTD</title>
+    <body> 
+      <h1>Cache Lab</h1>
+      <div id="Main-box">
+        <h2>Appication for smart Green card</h2>
+        <div id="msg"></div>div>
+        <form id="card-form">
+          <label
+            >First Name:
+            <input name="first_name" required />
+          </label>
+          <label
+            >Last Name:
+            <input name="last_name" required />
+          </label>
+          <lable
+            >Nationality:
+            <input name="nationality" required />
+          </lable>
   <script src="index.js"></script>
 </body>
 </html> 
