--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>CacheLabs Pvt LTD</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="Index.css">
     <body> 
       <h1>Cache Lab</h1>
       <div id="Main-box">
