re arranged the folders and added the functions in CSS.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
     <body> 
-      <h1>Cache Lab</h1>
+      <h1>Cache Lab PVT LTD</h1>
       <div id="Main-box">
         <h2>Appication for smart Green card</h2>
         <div id="msg"></div>
